[BISERVER-6317] Fix for headers getting out of alignment with table contents

--- a/pentaho-gwt-widgets/src/org/pentaho/gwt/widgets/public/Widgets.css
+++ b/pentaho-gwt-widgets/src/org/pentaho/gwt/widgets/public/Widgets.css
@@ -885,7 +885,7 @@ input[type=password]:focus {
 .gwt-ScrollTable .dataTable td {
   border-bottom: 1px solid #BEBEBE;
   border-right: 1px solid #BEBEBE;
-  padding: 2px;
+  padding: 2px 2px 2px 4px;
 }
 
 .gwt-ScrollTable .dataTable-disabled td {
